--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <title>Document</title>
 </head>
 <body>
-    <py-script>
-for i in range(5):
-    print('Pythonで出力！')
-    </py-script>
+    <h1>レシピを探す<h1>
 </body>
 </html>
