--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>レシピを探す</title>
 </head>
 <body>
-    <h1>レシピを探す<h1>
-    <h2 id="test"><h2>
-    <h2 id=><h2> 
+    <h1>レシピを探す</h1>
+    <h2 id="test"></h2>
+    <h2></h2> 
 </body>
 </html>
